# ugpm

./: CMakeLists.txt  LICENSE  README.md
example/: ugpm_demo.cpp  ugpm_random_tests.cpp
preint/: cost_functions.h  math_utils.h  preint.h  simulation.h  types.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: paper_metrics.cpp  ugpm_demo.cpp
src/external_library/: CMakeLists.txt
src/external_library/gnuplot-iostream/: CMakeLists.txt
src/external_library/libgp/: CMakeLists.txt
src/external_library/libgp/include/: cov.h  gp.h
src/external_library/libgp/src/: cov.cc  gp.cc
